# Lima-camera-andor

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  pom.xml
cmake/: FindAndor.cmake
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst
include/: AndorBinCtrlObj.h  AndorCamera.h  AndorCompatibility.h  AndorDetInfoCtrlObj.h  AndorInterface.h  AndorRoiCtrlObj.h  AndorShutterCtrlObj.h  AndorSyncCtrlObj.h  andor_export.h
python/: __init__.py
sip/: AndorCamera.sip  AndorInterface.sip
src/: AndorBinCtrlObj.cpp  AndorCamera.cpp  AndorDetInfoCtrlObj.cpp  AndorInterface.cpp  AndorRoiCtrlObj.cpp  AndorShutterCtrlObj.cpp  AndorSyncCtrlObj.cpp  Makefile
tango/: Andor.py
